# MAD_RAGReader

./: .gitignore  README.md
backend/: Dockerfile  pyproject.toml
backend/db/: chat.db
backend/src/: main.py
backend/src/database/: __init__.py
backend/src/repo/: sqlite_database.py
backend/src/services/: __init__.py  clear_service.py  config.py  main_service.py  pdf_service.py
backend/src/services/utils/: __init__.py  prompt_service.py  vectorstore_service.py
backend/test/: test_api.py
docker/: docker-compose.yml
frontend/: Dockerfile  app.py  config.py
frontend/api/: api_client.py
frontend/components/: chat.py  sidebar.py
frontend/core/: state.py  streaming.py
