[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["vess william <vess1994@gmail.com>"]
packages = [{ include = "src" }]
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.135.3"
uvicorn = "^0.43.0"
langchain = "^1.2.14"
langchain-community = "^0.4.1"
faiss-cpu = "^1.13.2"
pypdf = "^6.9.2"
sentence-transformers = "^5.3.0"
fastembed = "^0.8.0"
langchain-groq = "^1.1.2"
python-dotenv = "^1.2.2"
python-multipart = "^0.0.24"

[tool.poetry.scripts]
start = "src.main:main"   


[tool.pytest.ini_options]
testpaths = ["test"]
filterwarnings = [
  "ignore::DeprecationWarning"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
